trunk/Archive2/b4/24e2479a6c2c1a/output
main.cpp:6:6: error: 'tbb' has not been declared
 bool tbb::localSearch(Dir map[ROWS][COLS], Dir map2[ROWS][COLS],int r, int c, SitRep sitrep){
      ^
main.cpp:6:23: error: 'Dir' was not declared in this scope
 bool tbb::localSearch(Dir map[ROWS][COLS], Dir map2[ROWS][COLS],int r, int c, SitRep sitrep){
                       ^
main.cpp:6:44: error: 'Dir' was not declared in this scope
 bool tbb::localSearch(Dir map[ROWS][COLS], Dir map2[ROWS][COLS],int r, int c, SitRep sitrep){
                                            ^
main.cpp:6:65: error: expected primary-expression before 'int'
 bool tbb::localSearch(Dir map[ROWS][COLS], Dir map2[ROWS][COLS],int r, int c, SitRep sitrep){
                                                                 ^
main.cpp:6:72: error: expected primary-expression before 'int'
 bool tbb::localSearch(Dir map[ROWS][COLS], Dir map2[ROWS][COLS],int r, int c, SitRep sitrep){
                                                                        ^
main.cpp:6:79: error: 'SitRep' was not declared in this scope
 bool tbb::localSearch(Dir map[ROWS][COLS], Dir map2[ROWS][COLS],int r, int c, SitRep sitrep){
                                                                               ^
main.cpp:6:92: error: expression list treated as compound expression in initializer [-fpermissive]
 bool tbb::localSearch(Dir map[ROWS][COLS], Dir map2[ROWS][COLS],int r, int c, SitRep sitrep){
                                                                                            ^
main.cpp:6:93: error: expected ',' or ';' before '{' token
 bool tbb::localSearch(Dir map[ROWS][COLS], Dir map2[ROWS][COLS],int r, int c, SitRep sitrep){
                                                                                             ^
